--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,190 @@
-div{
-    color: red;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+}
+
+body > *{
+    box-sizing: border-box;
+}
+
+.content{
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 5fr;
+    min-height: 100vh;
+
+}
+
+ul{
+    list-style: none;
+}
+
+
+header, aside, main{
+    padding: 1rem;
+}
+
+
+header{
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    background-color: aliceblue;
+}
+
+aside{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    background-color: #e5e7eb;
+}
+
+main{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+button{
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+    background: transparent;
+    margin: 0 1rem;
+}
+
+.sidebar-header{
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
+}
+
+.sidebar-title{
+    margin-right: 2rem;
+}
+
+.proj-btn{
+    font-size: 18px;
+    padding: 12px 28px;
+    margin-bottom: 1.5rem;
+    border-radius: 7px;
+    background-color: #FFFFFF;
+}
+
+.proj-header{
+    display: block;
+    text-align: center;
+    padding: 1rem;
+}
+
+.proj-actions{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hidden{
+    display: none;
+}
+
+.active-project{
+    cursor: not-allowed;
+}
+
+.proj-todos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.todo-card {
+    display: flex;
+    flex-direction: column;
+    width: 35vw;
+    border-radius: 10px;
+    padding: 0 1rem;
+    margin: 0.5rem 0;
+    background-color: white;
+}
+
+.card-primary {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
+}
+
+.card-checkbox-title {
+    display: flex;
+    align-items: center;
+}
+
+.card-title {
+    margin-left: 1rem;
+}
+
+.card-date {
+    font-size: 16px;
+    padding: 1rem 0;
+}
+
+.critical{
+    border: 2px solid red;
+}
+
+.high{
+    border: 2px solid #f97316;
+}
+
+.medium{
+    border: 2px solid #facc15;
+}
+
+.low{
+    border: 2px solid #15803d;
+}
+
+/* collapsible */
+
+.collapsible{
+    padding: 1rem;
+    margin-top: 0.5rem;
+    display: none;
+    overflow: hidden;
+}
+
+.expand-collapse-btn{
+    padding: 1rem 0;
+}
+
+.active, 
+.expand-collapse-btn:hover, 
+.card-del-btn:hover,
+.proj-actions > button:hover {
+    color: #1d4ed8;
+}
+
+.submit{
+    float: right;
+    padding: 12px 24px;
+    background-color: #1d4ed8;
+    border-radius: 7px;
+    color: white;
+}
+
+input, select, textarea{
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;;
+}
+
+input[type=checkbox]{
+    padding: 0;
+    margin: 0;
 }
